# Tauridium

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/assets/: darkreader.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: api.ts  ui.test.ts  ui.ts  updater.ts
