[package]
name = "tauridium"
version = "0.1.9"
edition = "2021"
description = "Tauridium — lightweight Tauri client for Ferdium"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
# Accès direct à l'API bas niveau de wry (remove_data_store macOS) pour purger le
# WKWebsiteDataStore d'un service supprimé. Redirigé vers ../vendor/wry par le patch.
wry = "0.55"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

[[bin]]
name = "tauridium"
path = "src/main.rs"

# wry patché : window.ipc mutable pour injecter le shim IPC Electron (cf. Synology Chat).
# Voir vendor/wry/src/wkwebview/mod.rs. À ré-appliquer en cas de montée de version de wry.
[patch.crates-io]
wry = { path = "../vendor/wry" }
